# chimera

./: .gitignore  README.md  chimera.cabal  experience_report.txt  stack.yaml
examples/: examples.cabal  stack.yaml
examples/ABS/Conversation/: Run.hs
examples/ABS/NewAgents/: Model.hs
examples/ABS/SIRExamples/FrSIR/: Agent.hs  Init.hs  Main.hs  Model.hs
examples/ABS/SIRExamples/SIREvent/: Agent.hs  Init.hs  Main.hs  Model.hs
examples/ABS/SIRExamples/Utils/: Sir.hs
examples/ABS/SugarScape/: Agent.hs  Common.hs  Init.hs  Main.hs  Model.hs  Renderer.hs  stack.yaml  sugarscape.cabal
examples/SD/SDSir/: Main.hs  StockFlow.hs
src/FRP/: Chimera.hs
src/FRP/Chimera/Agent/: Interface.hs  Monad.hs  Reactive.hs  Stream.hs
src/FRP/Chimera/Environment/: Continuous.hs  Definitions.hs  Discrete.hs  Network.hs  Spatial.hs  Utils.hs
src/FRP/Chimera/Random/: Monadic.hs  Pure.hs  Reactive.hs  Stream.hs
src/FRP/Chimera/Reactive/: DataFlow.hs  Extensions.hs  Transitions.hs
src/FRP/Chimera/Rendering/: Continuous2d.hs  Discrete2d.hs  GlossSimulator.hs  Network.hs
src/FRP/Chimera/SD/: Definitions.hs
src/FRP/Chimera/Simulation/: Common.hs  Init.hs  Internal.hs  ParIteration.hs  Replication.hs  Running.hs  SeqIteration.hs  Simulation.hs  Transaction.hs
