name:             sugarscape
version:          0.1
Build-Type:       Simple
cabal-version:    >= 1.2
author:           Jonathan Thaler
maintainer:       Jonathan Thaler (thaler.jonathan@gmail.com)
category:         Agent-Based Simulation, System-Dynamics, FRP
synopsis:         Implementation of the famous sugarscape model

description:      Implementation of the famous sugarscape model

build-type:        Simple

executable sugarscape
  main-is:        Main.hs

  hs-source-dirs: .
  
  other-modules:  Agent
                , Common
                , Environment
                , Exporter
                , Init
                , Model
                , Renderer

  build-depends:  base
                , chimera
                , dunai
                , bearriver
                , parallel
                , IfElse
                , transformers
                , MonadRandom
                , split
                , random
                , mtl
                , gloss
                
  ghc-options:      -O3 -Wall -Werror -fwarn-tabs -fno-warn-name-shadowing -threaded

-------------------------------------------------------------------------------
-- TEST-SUITES
-------------------------------------------------------------------------------
Test-Suite test_SugarScape
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs: ./Tests/
  main-is: Test.hs
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , chimera
    , QuickCheck
    , HUnit
  ghc-options:    -main-is Test 
  -- why the F*** is main-is not working???